--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ComposeApplication"
         tools:targetApi="31">
         <activity
-            android:name=".Kalculator4Compose"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ComposeApplication">
             <intent-filter>
