Membuat aplikasi list nama - Membuat aplikasi dengan 2 halaman yang berinteraksi dengan Intent - Membuat LazyColumn (fungsinya adalah jika kita membuat banyak kolom dan menampilkan ke layar, android hanya merender kolom yang terlihat oleh layar ) - Merubah file Theme.kt [ di baris 51 ] menjadi false - Membuat list yang menyimpan jenis data String [ di baris 52 ] - membuat animateDpAsState ( fungsinya agar saat pengguna menekan ElevatedButton pergerakannya menjadi halus )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ComposeApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".OnboardingScreen"
             android:exported="true"
             android:theme="@style/Theme.ComposeApplication">
             <intent-filter>
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
